--- a/public/css/timeline-style.css
+++ b/public/css/timeline-style.css
@@ -261,6 +261,7 @@ html, body, header, footer, main, nav, aside, article, section, div, form, img, 
   .tsui-img img {
     display: block;
     width: calc(100% - 70px);
+    max-height: 800px;
     margin-left: 60px;
     margin-right: 10px;
     margin-top: 5px;
